// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Data Storage API configuration should give correct API payload for creation 1`] = `
Object {
  "datalabInfo": Object {
    "domain": "test-datalabs.nerc.ac.uk",
    "name": "testlab",
  },
  "name": "dataStoreName",
  "projectKey": "project",
  "volumeSize": 12,
}
`;

exports[`Data Storage API configuration should give correct API payload for deletion 1`] = `
Object {
  "datalabInfo": Object {
    "domain": "test-datalabs.nerc.ac.uk",
    "name": "testlab",
  },
  "name": "dataStoreName",
  "projectKey": "project",
}
`;

exports[`Data Storage API configuration should give correct API request for creation 1`] = `
Object {
  "description": "expected description",
  "displayName": "expectedDisplayName",
  "internalEndpoint": "http://minio-expectedName/minio",
  "name": "expectedName",
  "projectKey": "project",
  "storageType": 2,
  "url": "https://project-expectedName.test-datalabs.nerc.ac.uk/minio",
  "volumeSize": 12,
}
`;
